--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,33 @@
-db_callback({
-  "features": [
+dict({
+  "items": [
+    {
+      "name": "金沢駅",
+      "site": "〒920-0858 石川県金沢市木ノ新保町1番1号",
+      "pluscode": "8Q8RHJHX+67",
+      "url": null,
+      "type": "sta"
+    },
+    {
+      "name": "兼六園",
+      "site": "〒920-0936 石川県金沢市兼六町１",
+      "pluscode": "8Q8RHM67+V3",
+      "url": null,
+      "type": "plc"
+    },
+    {
+      "name": "近江町市場",
+      "site": "〒920-0905 石川県金沢市上近江町５０",
+      "pluscode": "8Q8RHMC4+GP",
+      "url": null,
+      "type": "plc"
+    },
+    {
+      "name": "不室屋",
+      "site": "〒920-0831 石川県金沢市東山１丁目２５−３",
+      "pluscode": "8Q8RHMC9+X5",
+      "url": null,
+      "type": "eat"
+    },
     {
       "properties": {
         "name": "金沢駅"
