--- a/js/package.json
+++ b/js/package.json
@@ -29,36 +29,11 @@ dict({
       "type": "eat"
     },
     {
-      "properties": {
-        "name": "金沢駅"
-      },
-      "geometry": {
-        "coordinates": [136.6481606694275, 36.57809597446637]
-      }
-    },
-    {
-      "properties": {
-        "name": "兼六園"
-      },
-      "geometry": {
-        "coordinates": [136.66256630309994, 36.562323505378785]
-      }
-    },
-    {
-      "properties": {
-        "name": "近江町市場"
-      },
-      "geometry": {
-        "coordinates": [136.656813, 36.571313]
-      }
-    },
-    {
-      "properties": {
-        "name": "不室屋"
-      },
-      "geometry": {
-        "coordinates": [136.668063, 36.572437]
-      }
+      "name": "金沢21世紀美術館",
+      "site": "〒920-8509 石川県金沢市広坂１丁目２−１",
+      "pluscode": "8Q8RHM65+8G",
+      "url": null,
+      "type": "plc"
     }
   ]
 });
